--- a/configs/articulator/articulator-elephant-rd.yaml
+++ b/configs/articulator/articulator-elephant-rd.yaml
@@ -12,6 +12,8 @@ train_dataset:
       suffix: _background.png
     - name: camera_matrix
       suffix: _camera.txt
+      
+superAni_trainer_ON: False
 
 model:
   _target_: dos.models.articulator_grad_based.Articulator 
@@ -29,8 +31,8 @@ model:
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/elephant_standing/elephant.gltf    # Standing Rest Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/elephant_trunk_down/elephant.gltf    # Trunk down Pose    # Got more than 1 skin
   
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2804_elephant_trunk_up
-  superAnimal_kp_ON: True
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views  
+  superAnimal_kp_ON: False
 
   super_Ani_head_kps_ON:            False
   super_Ani_all_kps_except_face_ON: False
@@ -46,10 +48,11 @@ model:
   back_right_leg_kps_ON:            False
 
   num_pose_for_optim: 4
-  num_pose_for_visual: 10
+  num_pose_for_visual: 8
+  num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 4  # 
-  num_sample_farthest_points: 350
-  mode_kps_selection: "kps_based_on_superAnimal" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
+  num_sample_farthest_points: 50
+  mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   # shape_template_path: /work/oishideb/from_nfs2/uploads-files-2571750-Sheep_Family_v01/Sheep_HighPoly.obj   # 20 bones
   # shape_template_path: /users/oishideb/oishideb/SheepFemaleRD/SheepFemaleRD.obj                 # Rest Pose
   shape_template_path: /users/oishideb/oishideb/mesh_assets_all/elephant/elephant.obj           # Trunk up Pose
@@ -73,19 +76,23 @@ model:
   # "multiple_random_phi_in_batch"      # if selected this, then specify the no. here - "num_pose_for_optim"
   # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 2
   # "4_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 4
+  # "8_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 8
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
   multi_view_optimise_option: "4_side_views_only_in_batch"
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_target_images_sit
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_up
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_up
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_1
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_2
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/elephant_trunk_down_2_views4
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
   using_pil_object: False
-  cyc_consi_check_switch: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+  cyc_consi_check_switch: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   cyc_consi_check_dist_threshold: 10 # 15
   cyc_check_img_save: False # This saves all the images with Cycle Consistency Check
   # seed: 60
-  target_image_fixed: False
+  target_image_fixed: True
   save_individual_img: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   
   correspond:
@@ -98,6 +105,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 63
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
@@ -108,7 +116,7 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2804_elephant_trunk_up/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -134,7 +142,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2804_elephant_trunk_up
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3086_elephant_trunk_down_corres_4_views
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -146,7 +154,7 @@ device: cuda:0
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.00090          
+learning_rate: 0.0009          
 # for debugging
 num_iterations: 1000
 num_vis_iterations: 1
