--- a/configs/articulator/articulator-kangaroo-rd.yaml
+++ b/configs/articulator/articulator-kangaroo-rd.yaml
@@ -13,6 +13,8 @@ train_dataset:
     - name: camera_matrix
       suffix: _camera.txt
 
+superAni_trainer_ON: True
+
 model:
   _target_: dos.models.articulator_grad_based.Articulator 
   bones_predictor:
@@ -26,15 +28,22 @@ model:
     _target_: dos.components.skinning.gltf_skinning.Skin
     gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/kangaroo/kangaroo.gltf
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2677_kangaroo_rest_pose
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2705_kangaroo_eg_1
   superAnimal_kp_ON: True
-  super_Ani_head_kps_ON: False
-  super_Ani_body_kps_ON: False
-  all_4_legs_kps_ON: False
-  front_left_leg_kps_ON: False
-  front_right_leg_kps_ON: False
-  back_left_leg_kps_ON: False
-  back_right_leg_kps_ON: False
+  
+  super_Ani_head_kps_ON:            False
+  super_Ani_all_kps_except_face_ON: False
+  super_Ani_body_n_front_legs_ON:   True
+  super_Ani_body_neck_front_legs_ON: False
+  super_Ani_face_kps_ON:            False
+  super_Ani_neck_kps_ON:            False
+  super_Ani_body_kps_ON:            False
+  all_4_legs_kps_ON:                False
+  front_left_leg_kps_ON:            False
+  front_right_leg_kps_ON:           False
+  back_left_leg_kps_ON:             False
+  back_right_leg_kps_ON:            False
+
   num_pose_for_optim: 4
   num_pose_for_visual: 10
   num_sample_bone_line: 4  # 
@@ -61,7 +70,8 @@ model:
   # "4_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 4
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
   multi_view_optimise_option: "4_side_views_only_in_batch"
-  target_image_folder: /users/oishideb/oishideb/mv_dream_Sheep_target_img_4_views
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/kangaroo_target_images_1
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/kangaroo_target_images_2
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -83,6 +93,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 117
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
@@ -93,7 +104,7 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2677_kangaroo_rest_pose/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2705_kangaroo_eg_1/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -119,7 +130,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2677_kangaroo_rest_pose
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2705_kangaroo_eg_1
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -131,9 +142,9 @@ device: cuda:0
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.00090          
+learning_rate: 0.00025          
 # for debugging
-num_iterations: 30
+num_iterations: 35
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
