--- a/configs/articulator/articulator-giraffe-rd.yaml
+++ b/configs/articulator/articulator-giraffe-rd.yaml
@@ -13,6 +13,8 @@ train_dataset:
     - name: camera_matrix
       suffix: _camera.txt
 
+superAni_trainer_ON: True
+
 model:
   _target_: dos.models.articulator_grad_based.Articulator  # Other option is articulator_grad_based; articulator_nelder_mead
   bones_predictor:
@@ -29,15 +31,23 @@ model:
   
   path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2721_Giraffe_lr_0_0010
   superAnimal_kp_ON: True
-  super_Ani_head_kps_ON: False
-  super_Ani_body_kps_ON: False
-  all_4_legs_kps_ON: True
-  front_left_leg_kps_ON: False
-  front_right_leg_kps_ON: False
-  back_left_leg_kps_ON: False
-  back_right_leg_kps_ON: False
+
+  super_Ani_head_kps_ON:            False
+  super_Ani_all_kps_except_face_ON: False
+  super_Ani_body_n_front_legs_ON:   False
+  super_Ani_body_neck_front_legs_ON: False
+  super_Ani_face_kps_ON:            False
+  super_Ani_neck_kps_ON:            False
+  super_Ani_body_kps_ON:            False
+  all_4_legs_kps_ON:                True
+  front_left_leg_kps_ON:            False
+  front_right_leg_kps_ON:           False
+  back_left_leg_kps_ON:             False
+  back_right_leg_kps_ON:            False
+
   num_pose_for_optim: 4
-  num_pose_for_visual: 10
+  num_pose_for_visual: 8
+  num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 5  #
   num_sample_farthest_points: 150
   mode_kps_selection: "kps_based_on_superAnimal" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
@@ -86,6 +96,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 70
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
