--- a/configs/articulator/articulator-goat-rd.yaml
+++ b/configs/articulator/articulator-goat-rd.yaml
@@ -17,8 +17,10 @@ train_dataset:
     - name: camera_matrix
       suffix: _camera.txt
 
+superAni_trainer_ON: True
+
 model:
-  _target_: dos.models.articulator.Articulator 
+  _target_: dos.models.articulator_grad_based.Articulator 
   bones_predictor:
     _target_: dos.components.skinning.bones_estimation.BonesEstimator
     num_body_bones: 8
@@ -27,11 +29,27 @@ model:
     temperature: 0.05
 
   path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2131_Goat_walk
+  superAnimal_kp_ON: True
+
+  super_Ani_head_kps_ON:            False
+  super_Ani_all_kps_except_face_ON: False
+  super_Ani_body_n_front_legs_ON:   False
+  super_Ani_body_neck_front_legs_ON: False
+  super_Ani_face_kps_ON:            False
+  super_Ani_neck_kps_ON:            False
+  super_Ani_body_kps_ON:            False
+  all_4_legs_kps_ON:                True
+  front_left_leg_kps_ON:            False
+  front_right_leg_kps_ON:           False
+  back_left_leg_kps_ON:             False
+  back_right_leg_kps_ON:            False
+
   num_pose_for_optim: 1
-  num_pose_for_visual: 30
+  num_pose_for_visual: 8
+  num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 4  # 
   num_sample_farthest_points: 350
-  mode_kps_selection: "kps_fr_sample_on_bone_line" # Options are "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
+  mode_kps_selection: "kps_based_on_superAnimal" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   shape_template_path: /scratch/shared/beegfs/tomj/projects/articulator/data/synth_animals/shape_templates/cgtrader/uploads-files-2189654-Goat_family_v01/Goat_female.obj
   enable_texture_predictor: False
 
@@ -52,6 +70,8 @@ model:
   # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim"
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
   multi_view_optimise_option: "get_2_alternating_phi_45_degree_apart"
+  target_image_folder: /users/oishideb/oishideb/mv_dream_Sheep_target_img_4_views
+  pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
   using_pil_object: False
@@ -71,6 +91,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 47
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
