--- a/configs/articulator/articulator-simpson-man-rd.yaml
+++ b/configs/articulator/articulator-simpson-man-rd.yaml
@@ -35,7 +35,7 @@ model:
     gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/simpson_mesh_2/simpson.gltf            # Rest gen Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.gltf         # Walk Pose better
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2937_simpson
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2984_simpson_1_arm
   superAnimal_kp_ON: False           # IMPORTANT: If FALSE, change the option here as well - mode_kps_selection, also change in "superAni_trainer_ON"
 
   super_Ani_head_kps_ON:             False
@@ -51,10 +51,11 @@ model:
   back_left_leg_kps_ON:              False
   back_right_leg_kps_ON:             False
 
-  num_pose_for_optim: 4              # CHANGE multi_view_optimise_option AND target_image_folder
-  num_pose_for_visual: 12
+  num_pose_for_optim: 8              # CHANGE multi_view_optimise_option AND target_image_folder
+  num_pose_for_visual: 8
+  num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 4  # 
-  num_sample_farthest_points: 70
+  num_sample_farthest_points: 35
   mode_kps_selection: "kps_fr_sample_farthest_points" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   # shape_template_path: /work/oishideb/from_nfs2/uploads-files-2571750-Sheep_Family_v01/Sheep_HighPoly.obj   # 20 bones
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger/tiger.obj                   # Non rest Pose
@@ -88,9 +89,9 @@ model:
   # 12_side_views_only_in_batch
   # 12_side_views_only_in_batch_tiger_sit
   # 4_side_views_only_in_batch_90_360_270_180
-  multi_view_optimise_option: "4_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
+  multi_view_optimise_option: "8_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
   
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/simpson_Matt
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/simpson_Matt_1_arm_8_views
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_esbon_rotations"
@@ -112,6 +113,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 49
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
@@ -122,7 +124,7 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2937_simpson/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2984_simpson_1_arm/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -148,7 +150,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2937_simpson
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2984_simpson_1_arm
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -162,7 +164,7 @@ device: cuda:0
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
 learning_rate: 0.0009          
 # for debugging
-num_iterations: 1000
+num_iterations: 100
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
