--- a/configs/articulator/articulator-tiger-rd.yaml
+++ b/configs/articulator/articulator-tiger-rd.yaml
@@ -13,7 +13,7 @@ train_dataset:
     - name: camera_matrix
       suffix: _camera.txt
 
-# superAni_trainer_ON: False       # IMP: switich on/off superAnimal_kp_ON as well
+superAni_trainer_ON: True       # IMPORTANT: switich on/off at 3 places: superAnimal_kp_ON and CHANGE mode_kps_selection
 
 model:
   _target_: dos.models.articulator_grad_based.Articulator 
@@ -35,8 +35,8 @@ model:
     gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_rest_pose/tiger.gltf           # Rest gen Pose
     # gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/tiger_walk_pose/tiger.gltf         # Walk Pose better
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2940_tiger
-  superAnimal_kp_ON: True   # IMP: switich on/off superAni_trainer_ON as well
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001
+  superAnimal_kp_ON: True   # IMPORTANT: switich on/off superAni_trainer_ON and change mode_kps_selection
 
   super_Ani_head_kps_ON:             False
   super_Ani_all_kps_except_face_ON:  False
@@ -51,10 +51,11 @@ model:
   back_left_leg_kps_ON:              False
   back_right_leg_kps_ON:             False
 
-  num_pose_for_optim: 12              # CHANGE multi_view_optimise_option AND target_image_folder
-  num_pose_for_visual: 12
+  num_pose_for_optim: 8              # CHANGE multi_view_optimise_option AND target_image_folder
+  num_pose_for_visual: 8
+  num_pose_for_visual_3D: 300        # for 3D
   num_sample_bone_line: 4  # 
-  num_sample_farthest_points: 350
+  num_sample_farthest_points: 100
   mode_kps_selection: "kps_based_on_superAnimal" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   # shape_template_path: /work/oishideb/from_nfs2/uploads-files-2571750-Sheep_Family_v01/Sheep_HighPoly.obj   # 20 bones
   # shape_template_path: /users/oishideb/oishideb/mesh_assets_all/tiger/tiger.obj                   # Non rest Pose
@@ -87,25 +88,29 @@ model:
   # 7_side_views_only_in_batch
   # 12_side_views_only_in_batch
   # 12_side_views_only_in_batch_tiger_sit
-  multi_view_optimise_option: "4_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
+  multi_view_optimise_option: "8_side_views_only_in_batch"            # CHANGE num_pose_for_optim AND target_image_folder
   
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_target_images_sit         # Sitting
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_walk              # Blender gen walk
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_target_strech_front_legs    # Strech front legs
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_target_strech_front_legs    # Strech front legs 4 views
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_4_views_target_img     # walk 4 views
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_strech_all_4_legs
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_Blender_crawl
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_8_views_target_img       # CHANGE multi_view_optimise_option AND num_pose_for_optim
-  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_12_views_target_img       # Tiger Walk 12 views
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_jumping_8_views       # CHANGE multi_view_optimise_option AND num_pose_for_optim
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_8_views_target_img
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_12_views_target_img     # Tiger Walk 12 views
   # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_sit_12_views_target_img_2    # Tiger Sit  12 views
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_walk_8_views                   # Tiger Walk 8 views
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/tiger_crouching
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
   using_pil_object: False
-  cyc_consi_check_switch: True    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
+  cyc_consi_check_switch: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   cyc_consi_check_dist_threshold: 10      # 15
   cyc_check_img_save: False # This saves all the images with Cycle Consistency Check
   # seed: 60
-  target_image_fixed: False
+  target_image_fixed: True
   save_individual_img: False    # IMPORTANT: THIS SAME VARIABLE IS USED AT TWO PLACES, SWITCH ON/OFF AT BOTH PLACES
   
   correspond:
@@ -118,6 +123,7 @@ model:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
     num_bones: 60
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
@@ -128,14 +134,17 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2940_tiger/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
     prompts_source: '' #.The photo should have a grey background.' # DOS-1339  opti multi_view_azimu, GS20, Num_Infe50
     # negative_prompts: 'front view, side view, tail, black' #  , cartoon, dead, shadow, reflection'     # the string shouldn't be in a square brackets ['']
     # prompts: 'A photograph of a fully white cow running very fast, back view. All four legs should be visible. No cow tail'
-    prompts: 'A photograph of a Sheep walking very very fast'
+    
+    prompts: 'A photograph of a tiger sitting on the ground, back view, back view.'
+    # prompts: 'A photograph of a tiger jumping with its front two legs off the ground, back view, back view.'
+    # prompts: 'A photograph of a tiger stretching its front leg forward, back view, back view.'
     view_dependent_prompting: True
     mode: sds_latent # Options are sds_image OR sds_latent-l2_image # sds_latent
     lr: 0.1  # For DeepFloyd+SDS
@@ -154,7 +163,8 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2940_tiger
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3167_tiger_crouching_lr_0_0001
+
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
@@ -166,9 +176,9 @@ device: cuda:0
 # resume: True
 
 # learning_rate: 1e-9  # tried with 0.01, 0.5, 0.9, 1;   # 1e-4   # DOS_1432
-learning_rate: 0.0009          
+learning_rate: 0.0001    # presiously 0.0009
 # for debugging
-num_iterations: 1000
+num_iterations: 300
 num_vis_iterations: 1
 num_eval_iterations: 10
 save_checkpoint_freq: 50
