--- a/requirements.txt
+++ b/requirements.txt
@@ -1,209 +1,226 @@
-absl-py==1.3.0
-accelerate==0.16.0
-aiohttp==3.8.3
+absl-py==2.1.0
+accelerate==0.33.0
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
 albumentations==1.3.0
 antlr4-python3-runtime==4.8
 appdirs==1.4.4
-arrow==1.2.3
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-backoff==2.2.1
-backports.functools-lru-cache==1.6.4
-beautifulsoup4==4.12.2
-blinker==1.5
-boto3==1.28.18
-botocore==1.31.18
+arrow==1.3.0
+asttokens==2.4.1
+astunparse==1.6.3
+async-timeout==4.0.3
+attrs==24.2.0
+black==21.4b2
+blosc2==2.0.0
+boto3==1.35.8
+botocore==1.35.8
 bravado==11.0.3
-bravado-core==6.1.0
-brotlipy==0.7.0
-cachetools==5.2.0
+bravado-core==6.1.1
+cachetools==5.5.0
 certifi==2022.12.7
-cffi==1.15.1
 charset-normalizer==2.1.1
-click==8.1.3
-cloudpickle==2.2.1
-colorama==0.4.6
-comm==0.1.2
-ConfigArgParse==1.5.3
-cryptography==38.0.4
-cycler==0.11.0
-Cython==3.0.0
-debugpy==1.6.4
-decorator==4.4.2
-git+https://github.com/facebookresearch/detectron2/archive/v0.6.zip
+click==8.1.7
+clip==1.0
+cloudpickle==3.0.0
+comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+Cython==3.0.11
+dataclasses-json==0.6.7
+decorator==5.1.1
+deeplabcut==3.0.0rc4
+Deprecated==1.2.14
+detectron2==0.6
 diffdist==0.1
-diffusers==0.20.1
+diffusers==0.27.2
+dlclibrary==0.0.6
 docker-pycreds==0.4.0
-einops==0.3.0
-entrypoints==0.4
-executing==1.2.0
-faiss==1.7.2
+einops==0.8.0
+exceptiongroup==1.2.2
+executing==2.0.1
 faiss-cpu==1.7.4
-filelock==3.8.0
-fonttools==4.37.1
+faiss-gpu==1.7.2
+filelock==3.13.1
+filterpy==1.4.5
+flatbuffers==24.3.25
+fonttools==4.53.1
 fqdn==1.5.1
-frozenlist==1.3.3
-fsspec==2023.6.0
-ftfy==6.1.1
-future==0.18.3
-fvcore==0.1.5.post20220512
-gdown==4.5.1
-gitdb==4.0.10
-GitPython==3.1.32
-glfw==2.5.5
-google-auth==2.15.0
+frozenlist==1.4.1
+fsspec==2024.2.0
+ftfy==6.2.3
+future==1.0.0
+fvcore==0.1.5.post20221221
+gast==0.4.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-auth==2.34.0
 google-auth-oauthlib==0.4.6
-grpcio==1.51.1
-huggingface-hub==0.12.0
+google-pasta==0.2.0
+grpcio==1.66.1
+h5py==3.11.0
+huggingface-hub==0.24.6
 hydra-core==1.1.1
 idna==3.4
-imageio==2.31.1
-imageio-ffmpeg==0.4.7
-importlib-metadata==5.1.0
+imagecodecs==2024.6.1
+imageio==2.35.1
+imageio-ffmpeg==0.5.1
+imgaug==0.4.0
+importlib_metadata==8.4.0
+importlib_resources==6.4.4
 iopath==0.1.9
-ipdb==0.13.9
-ipykernel==6.19.2
-ipython==8.7.0
+ipdb==0.13.13
+ipython==8.26.0
+ipywidgets==8.1.5
 isoduration==20.11.0
-jedi==0.18.2
+jaxtyping==0.2.33
+jedi==0.19.1
+Jinja2==3.1.3
 jmespath==1.0.1
-joblib==1.2.0
-jsonpointer==2.4
+joblib==1.4.2
+jsonpointer==3.0.0
 jsonref==1.1.0
-jsonschema==4.18.6
-jsonschema-specifications==2023.7.1
-jupyter_client==7.4.8
-jupyter_core==5.1.0
-kiwisolver==1.4.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+jupyterlab_widgets==3.0.13
+keras==2.10.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.4.5
 kornia==0.6.0
-lazy_loader==0.3
-lightning-utilities==0.10.0
-loguru==0.7.0
-lpips==0.1.4
-git+https://github.com/lvis-dataset/lvis-api/archive/master.zip
-Markdown==3.4.1
-MarkupSafe==2.1.1
-matplotlib==3.5.3
-matplotlib-inline==0.1.6
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
+lazy_loader==0.4
+libclang==18.1.1
+llvmlite==0.43.0
+lvis==0.5.3
+Markdown==3.7
+MarkupSafe==2.1.5
+marshmallow==3.22.0
+mask2former==0.1
+matplotlib==3.8.4
+matplotlib-inline==0.1.7
 monotonic==1.6
-moviepy==1.0.1
-msgpack==1.0.5
-multidict==6.0.2
+mpmath==1.3.0
+msgpack==1.0.8
+msgpack-numpy==0.4.8
+multidict==6.0.5
 mypy-extensions==1.0.0
-neptune==1.8.2
-nest-asyncio==1.5.6
-networkx==3.1
-ninja==1.10.2.3
-nltk==3.7
-numpy==1.23.1
-git+https://github.com/NVlabs/nvdiffrast/
+neptune==1.11.1
+networkx==3.2.1
+ninja==1.11.1.1
+nltk==3.9.1
+numba==0.60.0
+numexpr==2.10.1
+numpy==1.26.3
+nvdiffrast==0.3.1
 oauthlib==3.2.2
+odise==0.1
 omegaconf==2.1.1
 open-clip-torch==2.0.2
 opencv-python==4.6.0.66
-opencv-python-headless==4.8.0.74
-packaging==22.0
-pandas==2.0.3
-git+https://github.com/cocodataset/panopticapi/archive/master.zip
-parso==0.8.3
-pathspec==0.11.2
-pathtools==0.1.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.2.0
-pip==22.3.1
-platformdirs==2.6.0
-portalocker==2.6.0
-proglog==0.1.9
-prompt-toolkit==3.0.36
-protobuf==4.21.11
-psutil==5.9.4
+opencv-python-headless==4.10.0.84
+opt-einsum==3.3.0
+packaging==24.1
+pandas==2.2.2
+panopticapi==0.1
+parso==0.8.4
+pathspec==0.12.1
+patsy==0.5.6
+pexpect==4.9.0
+pillow==10.2.0
+pip==24.2
+platformdirs==4.2.2
+plotly==5.23.0
+portalocker==2.10.1
+prompt_toolkit==3.0.47
+protobuf==3.19.6
+psutil==6.0.0
 ptyprocess==0.7.0
-pure-eval==0.2.2
-pyasn1==0.4.8
-pyasn1-modules==0.2.7
-pycocotools==2.0.6
-pycparser==2.21
+pure_eval==0.2.3
+py-cpuinfo==9.0.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycocotools==2.0.8
 pyDeprecate==0.3.1
-pydot==1.4.2
-Pygments==2.13.0
-PyJWT==2.6.0
-PyOpenGL==3.1.6
-pyOpenSSL==22.1.0
-pyparsing==3.0.9
-PySocks==1.7.1
-python-dateutil==2.8.2
+pydot==3.0.1
+pygltflib==1.16.2
+Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
 pytorch-lightning==1.4.2
-pytorch3d==0.7.0
-pytz==2023.3
-pyu2f==0.1.5
-PyWavelets==1.4.1
-PyYAML==6.0
-pyzmq==24.0.1
+pytz==2024.1
+PyYAML==6.0.2
+pyzmq==26.2.0
 qudida==0.0.4
-referencing==0.30.0
-regex==2022.10.31
+referencing==0.35.1
+regex==2024.7.24
 requests==2.28.1
-requests-oauthlib==1.3.1
+requests-oauthlib==2.0.0
 rfc3339-validator==0.1.4
-rfc3987==1.3.8
-rpds-py==0.9.2
+rfc3986-validator==0.1.1
+rpds-py==0.20.0
 rsa==4.9
-s3transfer==0.6.1
-safetensors==0.3.1
-scikit-image==0.21.0
-scikit-learn==1.3.0
-scipy==1.9.1
--e git+ssh://git@github.com/Junyi42/sd-dino.git
-sentencepiece==0.1.99
-sentry-sdk==1.29.2
-setproctitle==1.3.2
-setuptools==65.5.1
-simplejson==3.19.1
+ruamel.yaml==0.18.6
+ruamel.yaml.clib==0.2.8
+s3transfer==0.10.2
+safetensors==0.4.4
+scikit-image==0.24.0
+scikit-learn==1.5.1
+scipy==1.10.1
+sentry-sdk==2.13.0
+setproctitle==1.3.3
+setuptools==72.2.0
+shapely==2.0.6
+simplejson==3.19.3
 six==1.16.0
-smmap==5.0.0
-soupsieve==2.4.1
+skingltf==0.1
+smmap==5.0.1
 stable-diffusion-sdkit==2.1.3
-stack-data==0.6.2
-swagger-spec-validator==3.0.3
+stack-data==0.6.3
+statsmodels==0.14.2
+swagger-spec-validator==3.0.4
+sympy==1.12
+tables==3.8.0
 tabulate==0.9.0
-tensorboard==2.10.0
+tenacity==9.0.0
+tensorboard==2.10.1
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-termcolor==2.1.1
-test-tube==0.7.5
-threadpoolctl==3.2.0
-tifffile==2023.7.18
-timm==0.6.11
-tinycudann==1.6
-tokenizers==0.13.2
+tensorflow==2.10.0
+tensorflow-estimator==2.10.0
+tensorflow-io-gcs-filesystem==0.37.1
+tensorpack==0.11
+termcolor==2.4.0
+test_tube==0.7.5
+tf-slim==1.1.0
+threadpoolctl==3.5.0
+tifffile==2024.8.28
+timm==1.0.8
+tokenizers==0.13.3
 toml==0.10.2
-torch==1.12.1
-torchaudio==0.12.1
+tomli==2.0.1
+torch==2.1.0+cu121
+torchaudio==2.1.0+cu121
 torchmetrics==0.6.0
-torchvision==0.13.1
-tornado==6.2
-tqdm==4.64.1
-traitlets==5.7.0
-transformers==4.27.0
-typing_extensions==4.4.0
-tzdata==2023.3
+torchvision==0.16.0+cu121
+tqdm==4.66.5
+traitlets==5.14.3
+transformers==4.26.1
+triton==2.1.0
+typeguard==2.13.3
+types-python-dateutil==2.9.0.20240821
+typing_extensions==4.9.0
+typing-inspect==0.9.0
+tzdata==2024.1
 uri-template==1.3.0
-urllib3==1.26.13
-wandb==0.15.8
-wcwidth==0.2.5
-webcolors==1.13
-websocket-client==1.6.1
-Werkzeug==2.2.2
-wheel==0.38.4
-xatlas==0.0.6
+urllib3==1.26.20
+wandb==0.17.8
+wcwidth==0.2.13
+webcolors==24.8.0
+websocket-client==1.8.0
+Werkzeug==3.0.4
+wheel==0.44.0
+widgetsnbextension==4.0.13
+wrapt==1.16.0
 yacs==0.1.8
-yarl==1.8.1
-zipp==3.11.0
-git+https://github.com/bytedance/MVDream
+yarl==1.9.4
+zipp==3.20.1
