updated config file

--- a/configs/articulator/articulator-monkey-rd.yaml
+++ b/configs/articulator/articulator-monkey-rd.yaml
@@ -13,6 +13,8 @@ train_dataset:
     - name: camera_matrix
       suffix: _camera.txt
 
+superAni_trainer_ON: True
+
 model:
   _target_: dos.models.articulator_grad_based.Articulator 
   bones_predictor:
@@ -24,9 +26,9 @@ model:
 
   gltf_skin:
     _target_: dos.components.skinning.gltf_skinning.Skin
-    gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/monkey_new/monkey.gltf
+    gltf_file_path: /users/oishideb/oishideb/mesh_assets_all/cartoon_monkey/cartoon_monkey.gltf
 
-  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2749_Monkey
+  path_to_save_images: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3087_Monkey
   superAnimal_kp_ON: True
 
   super_Ani_head_kps_ON:             False
@@ -42,14 +44,15 @@ model:
   back_left_leg_kps_ON:              False
   back_right_leg_kps_ON:             False
 
-  num_pose_for_optim: 4
-  num_pose_for_visual: 10
+  num_pose_for_optim: 8
+  num_pose_for_visual_3D: 300
+  num_pose_for_visual: 8
   num_sample_bone_line: 4  # 
   num_sample_farthest_points: 350
   mode_kps_selection: "kps_based_on_superAnimal" # Options are "kps_based_on_superAnimal", "kps_fr_sample_on_bone_line" OR "kps_fr_sample_farthest_points"
   # shape_template_path: /work/oishideb/from_nfs2/uploads-files-2571750-Sheep_Family_v01/Sheep_HighPoly.obj   # 20 bones
   # shape_template_path: /users/oishideb/oishideb/SheepFemaleRD/SheepFemaleRD.obj             # Rest Pose
-  shape_template_path: /users/oishideb/oishideb/mesh_assets_all/monkey_new/monkey.obj
+  shape_template_path: /users/oishideb/oishideb/mesh_assets_all/cartoon_monkey/cartoon_monkey.obj
   enable_texture_predictor: False
 
   view_option: "multi_view_azimu" # Options are "multi_view_azimu"; "multi_view_rand"; "single_view"
@@ -69,8 +72,9 @@ model:
   # "2_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 2
   # "4_side_views_only_in_batch"        # if selected this, then specify the no. here - "num_pose_for_optim" as 4
   # "guidance_and_rand_views_in_batch"  # if selected this, then specify the no. here - "num_pose_for_optim" as 2
-  multi_view_optimise_option: "4_side_views_only_in_batch"
-  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/monkey_target_img_raise_hand_2/
+  multi_view_optimise_option: "8_side_views_only_in_batch"
+  # target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/monkey_target_img_raise_hand_2/
+  target_image_folder: /users/oishideb/oishideb/all_mvdream_target_img_folders/monkey_25feb
   pose_update_interval: 1
 
   bones_rotations: "bones_rotations" # Options are "bones_rotations"; "DUMMY_bones_rotations"; "NO_bones_rotations"
@@ -91,7 +95,8 @@ model:
   articulation_predictor:
     _target_: dos.predictors.articulation_predictor.ArticulationPredictor  # Class Name
     size_dataset: 49
-    num_bones: 73
+    num_bones: 72
+    bone_initial_range: 0.0   # zero initialisation for bones
     degree: 70
     
   renderer:   # variable Name
@@ -102,7 +107,7 @@ model:
   diffusion_Text_to_Target_Img:  # variable Name
     _target_: dos.components.diffusion_model_text_to_image.diffusion_sds.DiffusionForTargetImg # Class Name
     cache_dir: /work/oishideb/from_nfs2/nfs2/.cache/huggingface_hub    # /work/oishideb/cache/huggingface_hub
-    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2749_Monkey/sd_sds_output/
+    output_dir: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3087_Monkey/sd_sds_output/
     init_image_path: /users/oishideb/laam/dos/examples/data/cow.png
     vis_name: cow-sds_latent-l2_image-600-lr1e-1.jpg
     # prompts: 'A photograph of a single cow running very fast, back view.' #.The photo should have a grey background.' # DOS-1338  opti multi_view_azimu, GS20, Num_Infe50
@@ -128,7 +133,7 @@ renderer:   # variable Name
   cam_pos_z_offset: 0.0
   fov: 28.84
 
-path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-2749_Monkey
+path_to_save_img_per_iteration: /work/oishideb/from_nfs2/nfs2/dos_output_files/cow/all_iteration_Train/batch_size_0/DOS-3087_Monkey
 checkpoint_root_dir: /work/oishideb/articulation_cow_chkpts
 experiment_name: articulator-dev-0.1
 save_each_iteration: True
